TEIIDDES-156 - Fixed URI creation for Driver jars. Removed notion of adding Driver Folders in JdbcDriverWizard. Reviewed by Ramesh
git-svn-id: http://anonsvn.jboss.org/repos/tdesigner/trunk@221 ceac5f5e-c25f-0410-8b95-ec8c2776e4a6